--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,46 +79,101 @@ section {
 }
 
 .bio {
-    display: inline-block;
+    display: flex;
     flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-around;
+    flex-direction: column;
 }
 
 .bio h2 {
     font-size: 1.75vw;
     margin: 0;
+    flex: 1;
+    align-items: flex-start;
 }
 
 .bio img {
     max-height: 300px;
+    flex: 1 50%;
+    align-items: center;
 }
 
-.bio p {
+.bio-info {
     padding: 0px 10px 0px 0px;
+    flex: 1;
+    align-items: center;
 }
 
 .projects {
-    margin: 0 auto;
-    display: flex;
+    margin: 10px auto;
+    align-items: center;
     flex-wrap: wrap;
-    justify-content: right;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+}
+
+.projects h2 {
+    font-weight: bold;
+    color: black;
+    font-size: 30px;
+    padding: 0px 0px 10px 0px;
+    flex-direction: row;
 }
 
 .main-work img {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    max-width: 950px;
+    align-content: center;
+    flex: 2 10%;
+    align-items: flex-start;
 }
 
+.other-work {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
 
+.other-work h3 {
+    text-align: center;
+}
+
+.other-work img {
+    max-width: 350px;
+    margin: 0 5px 0 5px;
+    flex-wrap: wrap;
+}
+.horiseon {
+    flex: 1;
+}
+
+.robot-gladiator {
+    flex: 1;
+}
+
+.future-projects {
+    flex: 1;
+}
+
+.future-projects img {
+    max-height: 225px;
+}
 
 .contact-info {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 20px 20px 20px 20px;
+    padding: 5px 5px 5px 5px;
     line-height: 1.5;
+    border: 10px solid dimgray;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 .flex-row {
     display: flex;
+    flex-direction: column;
+    text-align: left;
 }
